--- a/docs/stat563/hw_stat563.Rmd
+++ b/docs/stat563/hw_stat563.Rmd
@@ -598,10 +598,50 @@ $\forall a,b$, $b^2-a^2=1−\alpha$.
 
 One choice is $\begin{cases}a=\sqrt{\alpha/2}\\b=\sqrt{1-\alpha/2}\end{cases}$
 
-## 
+## HW5
+
+**12.2** Show that the extrema of are given by
+
+$f(b)=\frac1{1+b^2}{[S_{yy} -2bS_{xy}+ b^2S_{xx}]}$
+
+$b=\frac{-(S_{xx}-S_{yy}) + \sqrt{(S_{xx}-S_{yy})^2 +4S_{xy}^2}}{2S_{xy}}$
+
+Show that the "+" solution gives the minimum of $f(b)$.
+
+**12.4** Consider the MLE of the slope i n the EIV model
+
+$\hat\beta(\lambda)=\frac{-(S_{xx}-\lambda S_{yy}) + \sqrt{(S_{xx}-\lambda S_{yy})^2 +4\lambda S_{xy}^2}}{2\lambda S_{xy}}$
+
+where $\lambda=\sigma^2_\delta/\sigma^2_\varepsilon$ is assumed known.
+
+(a) Show that $\lim\limits_{\lambda\to0}\hat\beta(\lambda)=S_{xy}/S_{xx}$, the slope of the ordinary regression of y on.
+
+(b) Show that  $\lim\limits_{\lambda\to\infty}\hat\beta(\lambda)=S_{yy}/S_{xy}$ the reciprocal of the slope of the ordinary r gression of x on y.
+
+(c) Show that $\hat\beta(\lambda)$ is, in fact, monotone in $\lambda$ and is increasing if $S_{xy}>0$ and de reasing if $S_{xy}<O$.
+
+(d) Show that the orthogonal least squares line $\lambda=1$ is always between the lines gi en by the ordinary regressions of y on x and of x on y.
+
+(e) The following data were collected in a study to examine the relationship between brain weight and body weight in a number of animal species.
+
+Species
+Arctic fox, Owl monkey, Mountain beaver, Guinea pig, Chinchilla, Ground squirrel, Tree hyrax, Big brown bat
+
+Body weight (kg)
+(x)
+3.385, .480, 1 .350, 1 .040, .425, .101, 2.000, .023
+
+Brain weight (g)
+(y)
+44.50, 15.50, 8.10, 5.50, 6.40, 4.00, 12.30, .30
+
+Caiculate the MLE of the slope assuming the EIV model. Also, calculate the least squares slopes of the regressions of y on x and of x on y, and show how these quantities bound the MLE.
+
 
 
 ##
+
+
 
 1. Show $\sum C_id_i=0$
 
