--- a/static/usp570/rr_usp570.Rmd
+++ b/static/usp570/rr_usp570.Rmd
@@ -4,8 +4,8 @@ subtitle: "USP 570"
 author: 'Shen Qu'
 date: "Week 7"
 output:
-  pdf_document: default
   word_document: null
+  pdf_document: default
 bibliography: bib_usp570.bib
 mainfont: Times New Roman
 geometry: margin=1in
@@ -25,36 +25,42 @@ options(repos="https://cran.rstudio.com")
 
  - The 'Diamond of Design'
  
-@levinson2018metropolitan [Chapter.11] introduced a new 'Diamond', a structure of four key design tenents-hierarchy, morphology, layers, and  architectural content. Here author define the term 'design' as "how elements of place and plexus arrange their parts into a whole on a variety of scales, from the neighborhood to the metropolis." This framework even coveres the cities system as a high-level hierarchy place. This perspective is more from engineering or computer science. The author compare the layers of place and plexus with the OSI (Open Systems Interconnetion) Model, a computer networking framwork. This view point is different with the planner who have design background but it provide a powerful tools to explain the complexity of urban land use and transportation.
+@levinson2018metropolitan [Chapter.11] introduced a new 'Diamond,' a structure of four key design tenets-hierarchy, morphology, layers, and architectural content. Here authors define the term 'design' as "how elements of place and plexus arrange their parts into a whole on a variety of scales, from the neighborhood to the metropolis." This framework even covers the cities system as a high-level hierarchy place. This perspective is more from engineering or computer science. The authors compare the layers of place and plexus with the OSI (Open Systems Interconnection) Model, a computer networking framework. This viewpoint is different from the planner who has a design background, but it provides a powerful tool to explain the complexity of urban land use and transportation.
 
  - Objectively measure subjective qualities
 
 The study by @ewing2006identifying attempts to quantitatively measure five urban design qualities in terms of physical characteristics of street for walkability.
-The research team selected nine from 51 perceptual qualities, 48 from more than 200 video clips, and 10 urban design and planning experts. 
-The expert panel are invloved in defining the 'operational' and give the walkability ratings for each clips and assign a score for each quality on a scale from 1 (low) to 5 (high).
-This study used the fractional factorial design, the crossed multilevel Design, random effects models, and linear regression models to built up the relationship among physical teatures, urban design qulities ad overall walkability.
+The research team selected nine from 51 perceptual qualities, 48 from more than 200 video clips, and ten urban design and planning experts. 
+The expert panel is involved in defining the 'operational' and give the walkability ratings for each clip and assign a score for each quality on a scale from 1 (low) to 5 (high).
+This study used the fractional factorial design, the crossed multilevel Design, random effects models, and linear regression models to build up the relationship among physical features, urban design qualities, and overall walkability.
 
-At the end the team dropped four qualities and choose imageability, enclosure, human scale, and transparency as the measurement of walkability based on five criteria including significant level, ICC [^1], and variance components. This study found that 38 of more than 130 physical features have significant effects on one or more perceptual qualities.
-In a later paper, @ewing2009measuring gave all the consensus qualitaitive definiations and operational definitions for each qualities and identify detailed physical features associated with each qualitty
+It the end, the team dropped four qualities and choose imageability, enclosure, human scale, and transparency as the measurement of walkability based on five criteria including significant level, ICC [^1], and variance components. This study found that 37 of more than 130 physical features have significant effects on one or more perceptual qualities.
+In a later paper, @ewing2009measuring gave all the consensus qualitative definitions and operational definitions for each quality and identify detailed physical features associated with each quality.
 
 [^1]: Intraclass Correlation Coefficient reflects the proportion of the variance of an observation that is the result of differences between treatments.
 
  - Discussion: predetermined or prior information.
 
-Inversing input and output. The team selected 48 clips that "best matched the combinations of high/low values in a $2^{8-4}$ fractional factorial design (FFD)." FFD is for simplify and improve experiment. [^2] [@montgomery2017design] Through examining all the combination of factors, the result of FFD should tell us which factors and interactions are improtant or non-negligible. On the contrary, this reaserch use FFD as a method of sample selection. "The $2^{8-4}$ sample allowed us to capture the main effects [^3] of each urban design quality on overall walkability,...to maximize geographic diversity." [@clemente2005identifying]
-Actually, what this step do is not sample selection, is treatment selecetion. The 48 clips were rated by viewer in the next step giving $480$ observations on walkability and $480\times9$ observations on qualities. 
+The method of factorial design (FFD). The team selected 48 from more than 200 clips that "best matched the combinations of high/low values in a $2^{8-4}$ FFD." "The $2^{8-4}$ sample allowed us to capture the main effects [^3] of each urban design quality on overall walkability,...to maximize geographic diversity." [@ewing2006identifying]
 
-The $2^{8-4}$ FFD means k=8 factors, p=4 independent generators and 48 observations can assign each of 16 runs with 3 replication. Properly choosing the generators make the effects of potential interest are not aliased with each other.  However, the papar don't provide the list of generators and alias, don't clarify which factors are confounded and which factors and interaction have significant effects. 
+FFD is to simplify and improve experiment by factors selection. "The major use of FFD is in screening experiments—experiments in which many factors are considered and the objective is to identify those factors that have large effects."[^2] [@montgomery2017design] The input is potential factors and observations. Through examining all the combination of factors, the output is the important or non-negligible factors and interactions. 
+
+Firstly, the concept of sample selection means the values of the response variable. In this case, the sample is the $48\times10$ scores on walkability and $48\times10\times9$ scores on qualities rated by viewers in the next step. Selecting 48 from 200 scenes is a treatment selection.
+
+Secondly, a $2^{8-4}$ FFD means k=8 factors, p=4 independent generators. 48 observations can assign each of 16 runs with 3 replication. Properly choosing the generators make the effects of potential interest are not aliased with each other. However, the paper doesn't provide any information about generators and alias and don't clarify which factors are confounded.
+
+Finally, the results are not based on FFD, is to make the selected scenes more 'diverse' for the 9 qualities. 
+The combination table of quality and clips [@clemente2005identifying] only make the manual selection more clear.
+The correct use of FFD should be: Rating a random selection from 200 clips by 9 qualities, the results of FFD tell us which qualities or quality combination are more important; Or rating a random selection from 51 qualities by 48 clips, the results will tell us which clips or clips set have significant effects on urban design qualities. That might not be the purpose of this research, but it is what FFD can do. If some clips cannot match high/low values for a quality, we can use $3^{k}$ design with high/intermediate/low factor levels.
 
 [^2]: "A major use of fractional factorials is in screening experiments—experiments in which many factors are considered and the objective is to identify those factors that have large effects. Screening experiments are usually performed in the early stages of a project when many of the factors initially considered likely have little or no effect on the response. The factors identified as important are then investigated more thoroughly in subsequent experiments."
 
 [^3]: In FFD, "significant interaction will often mask the significance of main effects. In the presence of significant interaction, the experimenter must usually examine the levels of one factor, say A, with levels of the other factors fixed to draw conclusions about the main effect of A."
 
-The nonrandomized 'random effects models'. At the beginning of research design, research team define their purpose are "trying to operationalize design concepts, not assess public preferences". They believe "average person" cannot rate streetscapes as to their “legibility,” “transparency,” and so on. The expert define the criteria and rate the clips being selceted to match some designated qualities. Both of the viewers and the scenes are not randomly selected. These fixed treatments don't satisfy the assumptions of random effects models. It is not strange that "eight of the nine qualities were collinear. Tolerance values were unacceptably low when all variables were included in a regression at once." In this situation, we cannont extend the conclusions to all treatments in the population. Technically, this reaserch selected 5 from 9 urban design qualities are more amenable and would be defined operationally in the field survey instrument. The relationship about qualities and walkability are predetermined.
+A nonrandomized 'random effects models.' The concept of random effect means "the factor levels are chosen at random from a larger population of possible levels, and the experimenter wishes to draw conclusions about the entire population of levels, not just those that were used in the experimental design." [@montgomery2017design]
+In this research, the factor of qualities is assigned 9 levels according to literature and the factor of scenes has 48 levels selected to match the designated qualities. The factor of raters is also manipulated. The research team defines its purpose are "trying to operationalize design concepts, not assess public preferences." They believe "average person" cannot rate streetscapes as to their “legibility,” “transparency, and so on.” The 10 experts define the criteria and rate the clips. Therefore, the fixed-effect factors are not applicable to random effects models. It is not strange that "8 of the 9 qualities were collinear. Tolerance values were unacceptably low when all variables were included in regression at once." In this situation, we cannot extend the conclusions to all scenes and experts in the population. Technically, the relationship between qualities and walkability are predetermined in this experiment. The conclusion should be: For the 10 experts and the 48 scenes, the 5 urban design qualities and 37 physical features are more amenable and would be defined operationally in the field survey instrument. 
 
-
-
-It is also not enough to examine the relationship between walkability and physical features by significant level in linear regression. We can look this study as an iteration of the Bayesian paradigm. The prior information $\pi(\theta)$ (qualities) combined with the sample information $f(\vec x|\theta)$ (viewers and scenes) to obtain the posterior distribution $\pi(\theta|\vec x)$. [@casella2002statistical] Collecting more and more scenes and viewers to train the models and draw the inference. 
+It is also not enough to examine the relationship between walkability and physical features by significant level in linear regression. We can look at this study as an iteration of the Bayesian paradigm. The prior information $\pi(\theta)$ (qualities) combined with the sample information $f(\vec x|\theta)$ (viewers and scenes) to obtain the posterior distribution $\pi(\theta|\vec x)$. [@casella2002statistical] Collect more and more scenes and viewers to train the models and draw the inference. 
 
 
 References {#references .unnumbered}
